# web-mcp

./: .dockerignore  AGENTS.md  Cargo.toml  LICENSE  NOTICE  README.md  justfile
.githooks/: pre-push
docs/: result_shapes.md
src/: config.rs  error.rs  lib.rs  main.rs  server.rs  service.rs  tools.rs  transport.rs  url_guard.rs
src/operations/: browser.rs  mod.rs  search.rs
tests/: mcp_stdio_suite.rs
