[package]
name = "web-mcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22.1"
chromiumoxide = "0.9.1"
clap = { version = "4.5.54", features = ["derive", "env"] }
futures-util = "0.3.31"
reqwest = { version = "0.13", features = ["json", "query", "stream"] }
scraper = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.8"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
