[package]
name = "web-mcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
mcp-core = { git = "https://github.com/adelie-ai/mcp-core" }
base64 = "0.22.1"
chromiumoxide = "0.9.1"
clap = { version = "4.5.54", features = ["derive", "env"] }
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.8"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

# Release profiles. Default favors small, fast binaries (strip + thin LTO).
# Build variants: `cargo build --profile release-fast` / `--profile release-small`.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "unwind"

[profile.release-fast]
inherits = "release"
lto = "fat"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
strip = true
